--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.bumptech.glide:glide:4.3.1'
     compile 'com.android.volley:volley:1.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
